--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,7 @@
 ServiceIP:192.168.17.21
 ApiName:1
 ApiArg:10001
+B_Amount:200
+B_BetCode:123456
+B_BetData:1;1;2;1;01|02|03|04|05|06|07|-16|-
+B_LotteryType:10001
